Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
           <div class="memory-card glass">
             <figure>
-              <img src="https://picsum.photos/id/1021/800/1000.jpg" alt="Souvenir" />
+              <img src="assets/images/IMG-20251124-WA0088.jpg" alt="Souvenir" />
             </figure>
             <div class="memory-caption">
               <h3>Bonté</h3>
