--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="hero-inner glass">
       <h1>Joyeux Anniversaire <span class="special-name">S Bamanayi</span>❤️ </h1>
       <p class="subtitle">Que cette journée soit douce, lumineuse et remplie d’amour.</p>
-      <p class="wish">En ce 24 novembre, que ton cœur soit comblé de bonheur, de douceur et de lumière. Joyeux anniversaire, Blessing.</p>
+      <p class="wish">En ce 24 novembre, que ton cœur soit comblé de bonheur, de douceur et de lumière. Joyeux anniversaire S❤️</p>
       <div class="cake-wrap">
         <svg id="cake" viewBox="0 0 300 240" xmlns="http://www.w3.org/2000/svg" aria-label="Gâteau d’anniversaire">
           <defs>
